--- a/index.html
+++ b/index.html
@@ -3,23 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Handytarif Vergleich</title>
+  <title>ComPair</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>📱 Handytarif-Vergleich</h1>
+  <h1>📱 ComPair</h1>
+
+  <!-- Tabs -->
+  <div class="tabs">
+    <button class="tab-btn active" data-target="sim">SIM-Only</button>
+    <button class="tab-btn" data-target="phone">Tarif + Handy</button>
+    <button class="tab-btn" data-target="travel">Für den Urlaub</button>
+  </div>
+
   <input type="text" id="search" placeholder="Tarif oder Anbieter suchen...">
+
   <table id="tarifTable">
     <thead>
       <tr>
         <th>Anbieter</th>
-        <th>Datenvolumen</th>
+        <th>Beschreibung</th>
         <th>Preis (€)</th>
         <th>Link</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
+
   <script src="script.js"></script>
 </body>
 </html>
